Parser parity test (#984)
- Introduce `ParserParityTestHelper` which takes a dir and parses the
given project with `RewriteMavenProjectParser` (comparing) and
`RewritePropjectParser` (system under test). The parsing result is then
compared using AssertJ's `usingRecursiveComparison` which verifies that
all markers and their fields of both parsing results are equal proving
that both parsers yield the same result.
- Introduce ´TestProjectHelper` which helps set up test projects.
- Fixes multiple bugs, e.g. calculation of the classpath. 
- Cleanups and refactorings